Introducing ExternalResGatherer.js, fixes to TestLinks

--- a/public/gcintranet/ajax/sitemenu-fra.html
+++ b/public/gcintranet/ajax/sitemenu-fra.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
-<!-- Le contenu de ce fichier est extrait de https://intranet.canada.ca/wet/sitemenu-fra.html -->
+<!-- The contents of this file were retrieved from https://intranet.canada.ca/wet/sitemenu-fra.html -->
+
 <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
 wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html --> 
 <!-- DataAjaxFragmentStart --> 
@@ -69,7 +70,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <li class="hidden-md hidden-lg"><a href="#mnuTools" class="item">OutilsGC</a>
         <ul class="sm list-unstyled" id="mnuTools" role="menu">
           <li> <a href="https://gcconnex.gc.ca" class="GCTBannerOnclick" onClick="agf.pageview({page:'/vt/external/gcconnex.gc.ca/index-fra.asp', title:'GCTools Banner-fr: GCconnex'})"> <span class="bold-gc">GC</span>connex</span></a> </li>
-          <li> <a href="https://www.gcpedia.gc.ca/wiki/?setlang=fr" class="GCTBannerOnclick" onClick="agf.pageview({page:'/vt/external/gcpedia.gc.ca/index-eng.asp', title:'GCTools Banner-fr: GCpedia'})"> <span class="bold-gc">GC</span>pédia</span></a> </li>
+          <li> <a href="http://www.gcpedia.gc.ca/wiki/?setlang=fr" class="GCTBannerOnclick" onClick="agf.pageview({page:'/vt/external/gcpedia.gc.ca/index-eng.asp', title:'GCTools Banner-fr: GCpedia'})"> <span class="bold-gc">GC</span>pédia</span></a> </li>
           <li> <a href="https://gcannuaire-gcdirectory.gc.ca/fr/GCA/?pgid=002" class="GCTBannerOnclick" onClick="agf.pageview({page:'/vt/external/gcdirectory.gc.ca/index-eng.asp', title:'GCTools Banner-fr: GCdirectory'})"> <span class="bold-gc">GC</span>annuaire</span></a> </li>
           <li> <a href="https://gccollab.ca/splash/" class="GCTBannerOnclick" onClick="agf.pageview({page:'/vt/external/gccollab.ca/splash/', title:'GCTools Banner-fr: GCcollab'})"> <span class="bold-gc">GC</span>collab</span></a> </li>
         </ul>
