--- a/public/global/esdcfooter-eng.html
+++ b/public/global/esdcfooter-eng.html
@@ -1,4 +1,4 @@
-<!-- The contents of this file are retrieved from https://esdc.prv/_conf/assets/en/footer/esdcfooter-eng.html -->
+<!-- The contents of this file were retrieved from https://esdc.prv/_conf/assets/en/footer/esdcfooter-eng.html -->
 <h2 class="wb-inv">About this site</h2>
 <div class="row">
   <section class="col-sm-3">
