--- a/public/global/esdcfooter-fra.html
+++ b/public/global/esdcfooter-fra.html
@@ -1,4 +1,4 @@
-<!-- Le contenu de ce fichier est extrait de https://esdc.prv/_conf/assets/fr/footer/esdcfooter-fra.html -->
+<!-- The contents of this file were retrieved from https://esdc.prv/_conf/assets/fr/footer/esdcfooter-fra.html -->
 <h2 class="wb-inv">À propos de ce site</h2>
 <div class="row">
   <section class="col-sm-3">
