--- a/public/global/esdcmenu-fra.html
+++ b/public/global/esdcmenu-fra.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
-<!-- Le contenu de ce fichier est extrait de https://esdc.prv/_conf/assets/fr/mega_menu/esdcmenu-fra.html -->
+<!-- The contents of this file were retrieved from https://esdc.prv/_conf/assets/fr/mega_menu/esdcmenu-fra.html -->
+
 <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
 wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
 <!-- DataAjaxFragmentStart -->
@@ -56,7 +57,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
                 <li role="presentation"><a href="https://edsc.prv/fr/service-canada/dgsc/index.shtml">Service aux citoyens</a></li>
                 <li role="presentation"><a href="https://esdc.prv/fr/service-canada/dgsi/index.shtml">Services d'intégrité</a></li>
                 <!--<li role="presentation"><a href="https://esdc.prv/fr/service-canada/dgtgis/index.shtml">Transformation et gestion intégrée des services</a></li>-->
-                <li role="presentation"><a href="https://edsc.prv/fr/service-canada/dgptet/index.shtml">Direction générale du programme des travailleurs étrangers temporaires</a></li>
+                <!--<li role="presentation"><a href="https://edsc.prv/fr/service-canada/dgptet/index.shtml">Direction générale du programme des travailleurs étrangers temporaires</a></li>-->
                 <li role="presentation"><a href="https://edsc.prv/fr/service-canada/atlantique/index.shtml">Atlantique</a></li>
                 <li role="presentation"><a href="https://esdc.prv/fr/service-canada/quebec/index.shtml">Québec</a></li>
                 <li role="presentation"><a href="https://esdc.prv/fr/service-canada/ontario/index.shtml">Ontario</a></li>
@@ -92,6 +93,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
                 <li role="presentation"><a href="https://iservice.prv/fra/si/ve/divulgation/index.shtml">Divulgation d’acte répréhensible</a></li>
                 <li role="presentation"><a href="https://iservice.prv/fra/gerance_information/index.shtml">Gérance de l'information</a></li>
                 <li role="presentation"><a href="https://iservice.prv/fra/rh/era/index.shtml">Gestion du rendement</a></li>
+                <!-- li><a href="https://can01.safelinks.protection.outlook.com/?url=http%3A%2F%2Fwww12.edsc.gc.ca%2Fsgpe-pmps%2Fh.4m.2%40-fra.jsp&data=05%7C01%7CNC-CS-SC-PFOLIO-WEB-WEB-MINIST-INTRANET-GD%40hrsdc-rhdcc.gc.ca%7C472836bf18564c61643608dad239dc87%7C9ed558468a814246acd8b1a01abfc0d1%7C0%7C0%7C638053443203527066%7CUnknown%7CTWFpbGZsb3d8eyJWIjoiMC4wLjAwMDAiLCJQIjoiV2luMzIiLCJBTiI6Ik1haWwiLCJXVCI6Mn0%3D%7C3000%7C%7C%7C&sdata=8xCdUE2RszStejlynru18eGL0SxK5fafBlrAB5p69uc%3D&reserved=0">Publications (Publicentre)</a></li -->
                 <li role="presentation"><a href="https://edsc.prv/fr/outils_travail/gabarits.shtml">Gabarits</a></li>
                 <li role="presentation"><a href="https://iservice.prv/fra/rh/bgic/index.shtml">Centre de résolution informelle et de coaching</a></li>
                 <li role="presentation"><a href="https://iservice.prv/fra/langues_officielles/index.shtml">Langues officielles</a></li>
@@ -141,7 +143,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <li role="presentation"> <a href="#mnuLiens" class="item mnuPadding">Liens rapides</a>
         <ul class="sm list-unstyled" id="mnuLiens" role="menu">
           <li role="presentation"><a href="https://portal-portail.tbs-sct.gc.ca/home-fra.aspx">Application de gestion du rendement</a></li>
-          <li role="presentation"><a href="https://gcintranet.tpsgc-pwgsc.gc.ca/gc/index-fra.html">Applications Web de la rémunération</a></li>
+          <li role="presentation"><a href="http://gcintranet.tpsgc-pwgsc.gc.ca/gc/index-fra.html">Applications Web de la rémunération</a></li>
           <li role="presentation"><a href="https://iservice.prv/fra/si/securite/outils_et_ressources/trousse_outils/index.shtml">Boîte à outils des mesures faciles pour les employés et les gestionnaires</a></li>
           <li role="presentation"><a href="https://iservice.prv/fra/ombuds/index.shtml">Bureau de l’Ombuds à EDSC</a></li>
           <li role="presentation"><a href="https://nscc-cnas.pwgsc-tpsgc.gc.ca/index-fra.cfm">Centre national d'appels de service</a></li>
