--- a/public/gcintranet/ajax/sitemenu-eng.html
+++ b/public/gcintranet/ajax/sitemenu-eng.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- The contents of this file are retrieved from https://intranet.canada.ca/wet/sitemenu-eng.html -->
+<!-- The contents of this file were retrieved from https://intranet.canada.ca/wet/sitemenu-eng.html -->
+
 <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
 wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
 <!-- DataAjaxFragmentStart -->
@@ -69,8 +70,8 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <li class="hidden-md hidden-lg"><a href="#mnuTools" class="item">GCTools</a>
         <ul class="sm list-unstyled" id="mnuTools" role="menu">
           <li> <a href="https://gcconnex.gc.ca" class="GCTBannerOnclick" onClick="agf.pageview({page:'/vt/external/gcconnex.gc.ca/index-eng.asp', title:'GCTools Banner-en: GCconnex'})"> <span class="bold-gc">GC</span>connex</span></a> </li>
-          <li> <a href="https://www.gcpedia.gc.ca/wiki/?setlang=en" class="GCTBannerOnclick" onClick="agf.pageview({page:'/vt/external/gcpedia.gc.ca/index-eng.asp', title:'GCTools Banner-en: GCpedia'})"> <span class="bold-gc">GC</span>pedia</span></a> </li>
-          <li> <a href="https://gcdirectory-gcannuaire.gc.ca/en/GCD/?pgid=002" class="GCTBannerOnclick" onClick="agf.pageview({page:'/vt/external/gcdirectory.gc.ca/index-eng.asp', title:'GCTools Banner-en: GCdirectory'})"> <span class="bold-gc">GC</span>directory</span></a> </li>
+          <li> <a href="http://www.gcpedia.gc.ca/wiki/?setlang=en" class="GCTBannerOnclick" onClick="agf.pageview({page:'/vt/external/gcpedia.gc.ca/index-eng.asp', title:'GCTools Banner-en: GCpedia'})"> <span class="bold-gc">GC</span>pedia</span></a> </li>
+          <li> <a href="http://gcdirectory-gcannuaire.gc.ca/en/GCD/?pgid=002" class="GCTBannerOnclick" onClick="agf.pageview({page:'/vt/external/gcdirectory.gc.ca/index-eng.asp', title:'GCTools Banner-en: GCdirectory'})"> <span class="bold-gc">GC</span>directory</span></a> </li>
           <li> <a href="https://gccollab.ca/splash/" class="GCTBannerOnclick" onClick="agf.pageview({page:'/vt/external/gccollab.ca/splash/', title:'GCTools Banner-en: GCcollab'})"> <span class="bold-gc">GC</span>collab</span></a> </li>
         </ul>
       </li>
