--- a/public/global/esdcmenu1-eng.html
+++ b/public/global/esdcmenu1-eng.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- The contents of this file are retrieved from https://esdc.prv/_conf/assets/en/mega_menu/esdcmenu-eng.html -->
+<!-- The contents of this file were retrieved from https://esdc.prv/_conf/assets/en/mega_menu/esdcmenu-eng.html -->
+
 <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
 wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
 <!-- DataAjaxFragmentStart -->
@@ -19,7 +20,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           <li role="presentation"><a href="https://esdc.prv/en/department/esdccc/index.shtml">ESDC Charitable Campaign</a></li>
           <li role="presentation"><a href="https://esdc.prv/en/department/service-strategy/index.shtml">Our Transformation</a></li>
           <!--<li role="presentation"><a href="https://edsc.prv/en/department/pses/2017/index.shtml">2017 Public Service Employee Annual Survey</a></li>
-          <li role="presentation"><a href="http://www.tbs-sct.gc.ca/pses-saff/2017-2/results-resultats/bq-pq/02/index-fra.aspx">2017 Public Service Employee Survey</a></li>-->
+          <li role="presentation"><a href="https://www.tbs-sct.gc.ca/pses-saff/2017-2/results-resultats/bq-pq/02/index-fra.aspx">2017 Public Service Employee Survey</a></li>-->
           <li role="presentation"><a href="https://iservice.prv/eng/hr/hr_planning/pses.shtml">Public Service Employee Survey</a></li>
           <li role="presentation" class="slflnk"><a href="https://esdc.prv/en/department/index.shtml">Our Department - More</a></li>
         </ul>
@@ -57,7 +58,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 				<!--<li role="presentation"><a href="https://esdc.prv/en/service-canada/tismb/index.shtml">Transformation and Integrated Service Management</a></li>-->
                 <!--li role="presentation"><a href="https://esdc.prv/en/service-canada/tmb/index.shtml">Transformation Management Branch</a></li-->
                 <!--<li role="presentation"><a href="http://dialogue/grp/smb-dggs/sitepages/home.aspx">Service Management</a></li>-->
-                <li role="presentation"><a href="https://esdc.prv/en/service-canada/tfwpd/index.shtml">Temporary Foreign Worker Program Branch</a></li>
+                <!--<li role="presentation"><a href="https://esdc.prv/en/service-canada/tfwpd/index.shtml">Temporary Foreign Worker Program Branch</a></li>-->
                 <li role="presentation"><a href="https://esdc.prv/en/service-canada/atlantic/index.shtml">Atlantic</a></li>
                 <li role="presentation"><a href="https://esdc.prv/en/service-canada/quebec/index.shtml">Quebec</a></li>
                 <li role="presentation"><a href="https://esdc.prv/en/service-canada/ontario/index.shtml">Ontario</a></li>
@@ -144,14 +145,14 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <ul class="sm list-unstyled" id="mnuQuick" role="menu">
           <li role="presentation"><a href="https://iservice.prv/eng/finance/boardroom/index.shtml">Book a Boardroom</a></li>
           <li role="presentation"><a href="https://iservice.prv/eng/finance/amp/caam/workspace-management/index.shtml">Book a Workspace</a></li>
-          <li role="presentation"><a href="https://gcintranet.tpsgc-pwgsc.gc.ca/gc/index-eng.html">Compensation Web Applications</a></li>
+          <li role="presentation"><a href="http://gcintranet.tpsgc-pwgsc.gc.ca/gc/index-eng.html">Compensation Web Applications</a></li>
           <li role="presentation"><a href="https://iservice.prv/eng/is/security/tools_and_resources/toolkit/index.shtml">Easy Action Toolkit for Employees and Managers</a></li>
           <li role="presentation"><a href="http://forms-formulaires.prv/lc/content/EForms/en/Index.html">E-Forms</a></li>
 		  <li role="presentation"><a href="https://iservice.prv/eng/is/security/emergency_continuity/index.shtml">Emergency Management and Business Continuity</a></li>
           <li role="presentation"><a href="https://iservice.prv/eng/ombuds/index.shtml">ESDC Ombuds Office</a></li> 
           <li role="presentation"><a href="http://hrsc-csrh.prv/webforms/Home.aspx ">Human Resources Service Centre</a></li>
           <li role="presentation"><a href="https://www.canada.ca/en/services/jobs/opportunities/government.html">Job opportunities</a></li>
-          <li role="presentation"><a href="https://esdc.prv/en/department/dm/tina-namiesniowski/index.shtml">Manager's Corner</a></li>
+          <li role="presentation"><a href="https://esdc.prv/en/department/dm/tina-namiesniowski/index.shtml">Manager’s Corner</a></li>
           <li role="presentation"><a href="https://iservice.prv/eng/esrp/erp_ps/index.shtml">myEMS (PeopleSoft)</a></li>
           <li role="presentation"><a href="https://mapayegc-mygcpay.tpsgc-pwgsc.gc.ca/en">MyGCPay</a></li>
           <li role="presentation"><a href="https://nscc-cnas.pwgsc-tpsgc.gc.ca/index-eng.cfm">National Service Call Centre</a></li>
